<resources>
    <string name="app_name">Dedalos</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_welcome">Seja bem-vindo</string>
    <string name="text_login">Login</string>
    <string name="text_email">Email</string>
    <string name="text_password">Senha</string>
    <string name="text_enter">Entrar</string>
    <string name="text_forgot_password">Esqueci minha senha</string>
    <string name="text_not_register">Ainda não tem cadastro?</string>
    <string name="text_click_here">Clique aqui!</string>
    <string name="text_recover_password">Recuperar senha</string>
    <string name="text_forgot_you_password">Esqueceu sua senha?</string>
    <string name="text_desc_recover_password">Digite seu e-mail para que possamos\nenviar um código de verificação:</string>
    <string name="text_phone">Celular</string>
    <string name="text_send">Enviar</string>
    <string name="text_insert_code">Insira o código</string>
    <string name="text_desc_token">Para cadastrar sua nova senha, insira o token\nque você recebeu por e-mail:</string>
    <string name="text_confirm">Confirmar</string>
    <string name="text_new_password">Nova senha</string>
    <string name="text_desc_new_password">Cadastre a sua nova senha usando números e\ncaracteres</string>
    <string name="text_confirm_password">Confirmar senha</string>
    <string name="text_register">Cadastro</string>
    <string name="text_choice_you_profile">Escolha seu perfil</string>
    <string name="text_desc_register_type">Escolha o perfil de paciente e acesse os\nserviços de veterinário disponíveis</string>
    <string name="text_patient">Paciente</string>
    <string name="text_veterinary">Veterinário</string>
    <string name="text_name">Nome</string>
    <string name="text_cpf">CPF</string>
    <string name="text_birth_date">Data de nascimento</string>
    <string name="text_desc_register_token">Para cadastrar sua nova senha, insira o\ntoken que você recebeu por e-mail:</string>
    <string name="text_address">Endereço</string>
    <string name="text_desc_register_address">Preencha os espaços com o seu\nendereço atual:</string>
    <string name="text_number">Número</string>
    <string name="text_district">Bairro</string>
    <string name="text_city">Cidade</string>
    <string name="text_uf">UF</string>
    <string name="text_cep">CEP</string>
    <string name="text_register_password">Cadastrar senha</string>
    <string name="text_chat">Chat</string>
    <string name="text_animals">Animais</string>
    <string name="text_animal">Animal</string>
    <string name="text_consultations">Consultas</string>
    <string name="text_consultation">Consulta</string>
    <string name="text_profile">Perfil</string>
    <string name="text_location">Localização</string>
    <string name="text_change_address">Mudar endereço</string>
    <string name="text_my_animals">Meus animais</string>
    <string name="text_nearby_vets">Veterinários próximos</string>
    <string name="text_see_all">Ver todos</string>
    <string name="text_my_profile">Meu perfil</string>
    <string name="text_about">Sobre</string>
    <string name="text_contact_us">Fale conosco</string>
    <string name="text_faq">FAQ</string>
    <string name="text_exit">Sair</string>
    <string name="text_change">Alterar</string>
    <string name="text_install_version">Versão instalada</string>
    <string name="text_terms">TERMOS DE USO</string>
    <string name="text_policy">POLITICA DE PRIVACIDADE</string>
    <string name="text_terms_policy">Politica de privacidade e Termos de uso.</string>
    <string name="text_contact">Contato</string>
    <string name="text_talk_to_us">Fale com a gente!</string>
    <string name="text_desc_contact">Duvidas, sugestões ou reclamações?\nEntre em contato e retornaremos pelo e-mail\ninformado!</string>
    <string name="text_message">Mensagem</string>
    <string name="text_rating">Avaliação</string>
    <string name="text_patients">Pacientes</string>
    <string name="text_experience">Experiência</string>
    <string name="text_medical_record">Prontuário</string>
    <string name="text_consultation_value">Valor consulta</string>
    <string name="text_see_more">Ver mais</string>
    <string name="text_rate">Avaliar</string>
    <string name="text_add_pet">Adicione um novo pet</string>
    <string name="text_select_category">Selecione a categoria</string>
    <string name="text_breed">Raça</string>
    <string name="text_age">Idade</string>
    <string name="text_weight">Peso</string>
    <string name="text_size">Porte</string>
    <string name="text_description">Descrição</string>
    <string name="text_registers">Cadastrar</string>
    <string name="text_consultation_type">Tipo da consulta</string>
    <string name="text_symptoms">Sintomas</string>
    <string name="text_last_vaccines">Últimas vacinas</string>
    <string name="text_last_consultation">Úiltima consulta</string>
    <string name="text_write_you_message">Digite sua mensagem</string>
</resources>